# greenbone-gmp-scripts

./: .gitignore  README.md  alert.gmp.py  alerts.csv  clean-sensor.gmp.py  create-alerts-from-csv.gmp.py  create-credentials-from-csv.gmp.py  create-filters-from-csv.gmp.py  create-filters.gmp.py  create-schedules-from-csv.gmp.py  create-tags-from-csv.gmp.py  create-targets-from-csv.gmp.py  create-tasks-from-csv.gmp.py  credentials.csv  dummy_def.gmp.py  empty-trash.gmp.py  export-certificates.gmp.py  export-csv-report.gmp.py  export-hosts-csv.gmp.py  export-operatingsystems-csv.gmp.py  export-pdf-report.gmp.py  export-vuln-report.gmp.py  export-xml-report.gmp.py  filters.csv  list-alerts.gmp.py  list-credentials.gmp.py  list-feeds.gmp.py  list-filters.gmp.py  list-groups.gmp.py  list-hosts.gmp.py  list-last-reports.gmp.py  list-operatingsystems.gmp.py  list-policies.gmp.py  list-portlists.gmp.py  list-report-formats.gmp.py  list-reports.gmp.py  list-roles.gmp.py  list-scan-configs.gmp.py  list-scanners.gmp.py  list-schedules.gmp.py  (+16 more)
